--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,32 @@
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-weight: 300;
+    src: url('../fonts/poppins-v22-latin-300.woff2') format('woff2');
+}
+
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-weight: 400;
+    src: url('../fonts/poppins-v22-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-weight: 600;
+    src: url('../fonts/poppins-v22-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-weight: 900;
+    src: url('../fonts/poppins-v22-latin-900.woff2') format('woff2');
+}
+
 :root {
     --color-primary-dark: #31261A;
     --color-primary-light: #FAF4EA;
@@ -8,6 +37,14 @@
 /* Base */
 body {
     color: var(--color-primary-dark);
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+address {
+    font-style: normal;
 }
 
 ul {
@@ -17,6 +54,7 @@ ul {
 /* Button */
 .button {
     border-radius: 8px;
+    font-weight: 600;
     border: 2px solid var(--color-brand-light);
     background: var(--color-brand-light);
     color: var(--color-primary-light);
@@ -31,15 +69,20 @@ ul {
 /* Link */
 .link {
     color: var(--color-primary-light);
+    text-decoration: none;
 }
 
 .link:hover {
     color: var(--color-brand-light);
+    font-weight: 600;
 }
 
 /* Hero section */
 .hero-title {
     color: var(--color-primary-light);
+    text-align: center;
+    font-size: 128px;
+    font-weight: 900;
 }
 
 .hero-title .accent { 
@@ -52,6 +95,66 @@ ul {
     background-color: var(--color-brand-light);
 }
 
+.advantages-item {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.5;
+}
+
+.section-title {
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+}
+
 .section-title .accent {
     color: var(--color-brand-dark);
+}
+
+/* Tradition */
+.tradition-text .brand {
+    text-transform: uppercase;
+    color: var(--color-brand-light);
+    font-weight: 600;
+}
+
+.tradition-text .uppercase {
+    text-transform: uppercase;
+    color: var(--color-brand-light);
+}
+
+/* Chef section */
+.chef-title {
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 1.5;
+}
+
+/* Format section */
+.format-title {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.format-text {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+/* Footer */
+.adress-link {
+    color: var(--color-primary-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+}
+
+.adress-link:hover{
+    color: var(--color-brand-light);
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.address-copywright {
+    font-size: 14px;
 }
