--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,12 +35,21 @@
 }
 
 /* Base */
+* {
+    box-sizing: border-box;
+}
+
 body {
     color: var(--color-primary-dark);
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin-top: 0;
 }
 
 address {
@@ -51,8 +60,29 @@ ul {
     list-style-type: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
+.section {
+    padding: 48px 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1288px;
+    margin: 0 auto;
+    padding: 24px;
+}
+
 /* Button */
 .button {
+    padding: 16px 32px;
     border-radius: 8px;
     font-weight: 600;
     border: 2px solid var(--color-brand-light);
@@ -78,7 +108,12 @@ ul {
 }
 
 /* Hero section */
+.hero-section {
+    padding: 272px 0px;
+}
+
 .hero-title {
+    margin-bottom: 0;
     color: var(--color-primary-light);
     text-align: center;
     font-size: 128px;
@@ -112,6 +147,14 @@ ul {
 }
 
 /* Tradition */
+.tradition-section {
+    padding-top: 96px;
+}
+
+.tradition-title {
+    margin-bottom: 42px;
+}
+
 .tradition-text .brand {
     text-transform: uppercase;
     color: var(--color-brand-light);
@@ -127,7 +170,11 @@ ul {
 .chef-title {
     font-size: 40px;
     font-weight: 600;
-    line-height: 1.5;
+    margin-bottom: 16px;
+}
+
+.chefs-title {
+    margin-bottom: 80px;
 }
 
 /* Format section */
@@ -136,9 +183,17 @@ ul {
     font-weight: 600;
 }
 
+.formats-title {
+    margin-bottom: 80px;
+}
+
 .format-text {
     font-size: 14px;
     font-weight: 300;
+}
+
+.contact-title {
+    margin-bottom: 16px;
 }
 
 /* Footer */
