--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,8 +48,9 @@ body {
     margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    margin-top: 0;
+h1, h2, h3, h4, h5, h6, p { /* Бо браузер за замовчуваннями задає margin для h i p*/
+    margin-top: 0; /* Ставимо тільки top, бо bottom можливо пригодиться */
+    margin-bottom: 0;
 }
 
 address {
@@ -58,6 +59,8 @@ address {
 
 ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 .visually-hidden {
@@ -76,7 +79,7 @@ ul {
 .container {
     width: 100%;
     max-width: 1288px;
-    margin: 0 auto;
+    margin: 0 auto; /* Центруємо */
     padding: 24px;
 }
 
@@ -104,7 +107,33 @@ ul {
 
 .link:hover {
     color: var(--color-brand-light);
-    font-weight: 600;
+}
+
+/* Header */
+.header {
+    background-color: lightgray;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    gap: 40px;
+}
+
+.header-menu {
+    display: flex;
+    gap: 64px;
+
+    /* Ці 2 штуки щоб поставити на місце менюшку (відцентрувати і відстань зліва, справа)*/
+    flex-grow: 1;
+    justify-content: center;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 
 /* Hero section */
@@ -125,9 +154,16 @@ ul {
 }
 
 /* Advantages section */
+.advantages-section {
+    padding: 16px 0;
+    background-color: var(--color-brand-light);
+}
+
 .advantages-list {
     color: var(--color-primary-light);
-    background-color: var(--color-brand-light);
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
 }
 
 .advantages-item {
@@ -146,7 +182,17 @@ ul {
     color: var(--color-brand-dark);
 }
 
-/* Tradition */
+/* Tradition section */
+.tradition-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.tradition-content {
+    max-width: 710px;
+}
+
 .tradition-section {
     padding-top: 96px;
 }
@@ -159,6 +205,10 @@ ul {
     text-transform: uppercase;
     color: var(--color-brand-light);
     font-weight: 600;
+}
+
+.tradition-text.limited {
+    max-width: 340px;
 }
 
 .tradition-text .uppercase {
@@ -178,9 +228,26 @@ ul {
 }
 
 /* Format section */
+.formats-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.format-card {
+    padding: 24px;
+    border: 1px solid lightgray;
+    border-radius: 16px;
+}
+
+.format-item {
+    flex-basis: calc((100% - 40px) / 3);
+}
+
 .format-title {
     font-size: 24px;
     font-weight: 600;
+    margin-bottom: 16px;
 }
 
 .formats-title {
@@ -192,6 +259,11 @@ ul {
     font-weight: 300;
 }
 
+.contact-title {
+    margin-bottom: 16px;
+}
+
+/* Contact section */
 .contact-title {
     margin-bottom: 16px;
 }
