--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,8 +30,10 @@
 :root {
     --color-primary-dark: #31261A;
     --color-primary-light: #FAF4EA;
+    --color-secondary-dark: #A18268;
     --color-brand-dark: #465929;
-    --color-brand-light: #819B57;
+    --color-brand-normal: #819B57;
+    --color-brand-light: #cfcfbc;
 }
 
 /* Base */
@@ -41,6 +43,7 @@
 
 body {
     color: var(--color-primary-dark);
+    background-color: var(--color-primary-light);
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -88,8 +91,8 @@ ul {
     padding: 16px 32px;
     border-radius: 8px;
     font-weight: 600;
-    border: 2px solid var(--color-brand-light);
-    background: var(--color-brand-light);
+    border: 2px solid var(--color-brand-normal);
+    background: var(--color-brand-normal);
     color: var(--color-primary-light);
     cursor: pointer;
 }
@@ -106,7 +109,7 @@ ul {
 }
 
 .link:hover {
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 
 /* Header */
@@ -126,6 +129,7 @@ ul {
     gap: 64px;
 
     /* Ці 2 штуки щоб поставити на місце менюшку (відцентрувати і відстань зліва, справа)*/
+    /* Поставити li в ряд */
     flex-grow: 1;
     justify-content: center;
 }
@@ -139,6 +143,10 @@ ul {
 /* Hero section */
 .hero-section {
     padding: 272px 0px;
+    background-image: url(../images/hero-section-background.jpg);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
 }
 
 .hero-title {
@@ -150,13 +158,13 @@ ul {
 }
 
 .hero-title .accent { 
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 
 /* Advantages section */
 .advantages-section {
     padding: 16px 0;
-    background-color: var(--color-brand-light);
+    background-color: var(--color-brand-normal);
 }
 
 .advantages-list {
@@ -176,6 +184,10 @@ ul {
     font-size: 64px;
     font-weight: 900;
     line-height: 1.3;
+}
+
+.section-title.centered { /* Зробити в ДЗ аналогічне */
+    text-align: center;
 }
 
 .section-title .accent {
@@ -203,7 +215,7 @@ ul {
 
 .tradition-text .brand {
     text-transform: uppercase;
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
     font-weight: 600;
 }
 
@@ -213,7 +225,7 @@ ul {
 
 .tradition-text .uppercase {
     text-transform: uppercase;
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 
 /* Chef section */
@@ -223,8 +235,22 @@ ul {
     margin-bottom: 16px;
 }
 
+.chef-photo {
+    border-radius: 4px 4px 4px 200px;
+    box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
+}
+
 .chefs-title {
-    margin-bottom: 80px;
+    min-width: 520px;
+    margin: 0 auto 80px;
+}
+
+.chefs-title::before,
+.chefs-title::after {
+    display: block;
+    width: 352px;
+    border: 2px solid var(--color-brand-light);
+    content: ''; /* Обов'язковий елемент */
 }
 
 /* Format section */
@@ -235,9 +261,12 @@ ul {
 }
 
 .format-card {
+    height: 444px;
     padding: 24px;
     border: 1px solid lightgray;
     border-radius: 16px;
+    background-image: url('../images/walrus-format.jpg');
+    background: linear-gradient(180deg, rgba(49, 38, 26, 0.00) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, #31261A 100%);
 }
 
 .format-item {
@@ -277,11 +306,19 @@ ul {
 }
 
 .adress-link:hover{
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
     font-size: 16px;
     font-weight: 300;
 }
 
 .address-copywright {
     font-size: 14px;
+}
+
+.footer {
+    background-image: url('../images/footer-background.png');
+    background-color: var(--color-primary-dark);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
