--- a/styles/styles.css
+++ b/styles/styles.css
@@ -292,6 +292,26 @@ ul {
     margin-bottom: 16px;
 }
 
+/* Carousel */
+.carousel-button {
+    display: flex; /* Центруємо саму стрілку */
+    align-items: center;
+    justify-content: center;
+
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    fill: var(--color-primary-dark);
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid var(--color-primary-dark);
+}
+
+.carousel-button:hover {
+    background-color: var(--color-primary-dark);
+    fill: var(--color-primary-light);
+}
+
 /* Contact section */
 .contact-title {
     margin-bottom: 16px;
@@ -309,6 +329,14 @@ ul {
     color: var(--color-brand-normal);
     font-size: 16px;
     font-weight: 300;
+}
+
+.address-icon {
+    fill: var(--color-primary-light);
+}
+
+.address-icon:hover {
+    fill: var(--color-brand-normal);
 }
 
 .address-copywright {
