--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,9 @@
 }
 
 /* Base */
-* {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -53,11 +55,14 @@ body {
 
 h1, h2, h3, h4, h5, h6, p { /* Бо браузер за замовчуваннями задає margin для h i p*/
     margin-top: 0; /* Ставимо тільки top, бо bottom можливо пригодиться */
-    margin-bottom: 0;
 }
 
 address {
     font-style: normal;
+}
+
+a {
+    display: inline-block;
 }
 
 ul {
@@ -162,6 +167,10 @@ ul {
 }
 
 /* Advantages section */
+.contact-section {
+    margin-bottom: 48px;
+}
+
 .advantages-section {
     padding: 16px 0;
     background-color: var(--color-brand-normal);
@@ -229,17 +238,6 @@ ul {
 }
 
 /* Chef section */
-.chef-title {
-    font-size: 40px;
-    font-weight: 600;
-    margin-bottom: 16px;
-}
-
-.chef-photo {
-    border-radius: 4px 4px 4px 200px;
-    box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
-}
-
 .chefs-title {
     min-width: 520px;
     margin: 0 auto 80px;
@@ -253,7 +251,48 @@ ul {
     content: ''; /* Обов'язковий елемент */
 }
 
+.chefs-list {
+    display: flex;
+    flex-wrap: wrap; /* Якщо буде переповнення */
+    gap: 40px 30px; /* row gap | column gap */
+}
+
+.chefs-item {
+    flex-basis: calc((100% - 30px ) / 2); /* Зробити в ДЗ таке саме*/
+    /* -30px це наш gap між картками*/
+}
+
+.chef-card {
+    display: flex;
+    gap: 30px;
+}
+
+.chef-photo {
+    border-radius: 4px 4px 4px 200px;
+    box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
+}
+
+.chef-title {
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 16px;
+}
+
+.chef-text p { /* margin bottom для всіх*/
+    margin-bottom: 24px;
+}
+
+.chef-text p:last-child { /* Забираємо margin bottom в останньому */
+    margin-bottom: 0;
+}
+
 /* Format section */
+.formats-container {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
 .formats-list {
     display: flex;
     flex-wrap: wrap;
@@ -288,16 +327,31 @@ ul {
     font-weight: 300;
 }
 
+
+/* Contact section */
+.contact-container {
+    display: flex;
+    gap: 32px;
+}
+
 .contact-title {
     margin-bottom: 16px;
+    
 }
+
+.contact-map {
+    flex-shrink: 0;
+    border: none;
+    border-radius: 16px;
+}
+
 
 /* Carousel */
 .carousel-button {
     display: flex; /* Центруємо саму стрілку */
     align-items: center;
     justify-content: center;
-
+    flex-shrink: 0; /* Щоб кнопка не стискалась при жодних умовах */
     width: 44px;
     height: 44px;
     padding: 0;
@@ -318,6 +372,28 @@ ul {
 }
 
 /* Footer */
+.footer-container {
+    display: flex;
+    gap: 20px;
+}
+
+.footer-nav,
+.footer-address {
+    display: flex;
+    flex-basis: 50%;
+    gap: 20px;
+}
+
+.footer-logo,
+.footer-menu {
+    flex-grow: 1;
+}
+
+.address-list,
+.address-info {
+    flex-grow: 1;
+}
+
 .adress-link {
     color: var(--color-primary-light);
     font-size: 16px;
